--- a/versions.gradle
+++ b/versions.gradle
@@ -20,6 +20,7 @@ versions.ext_junit = "1.1.1"
 versions.espresso = "3.2.0"
 
 // etc
+versions.dagger = "2.28"
 versions.facebook = "[4,5)"
 
 ext.versions = versions
@@ -73,6 +74,14 @@ test.ext_junit = "androidx.test.ext:junit:$versions.ext_junit"
 test.espresso = "androidx.test.espresso:espresso-core:$versions.espresso"
 deps.test = test
 
+
+def dagger = [:]
+dagger.base = "com.google.dagger:dagger:$versions.dagger"
+dagger.android = "com.google.dagger:dagger-android:$versions.dagger"
+dagger.android_support = "com.google.dagger:dagger-android-support:$versions.dagger"
+dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
+dagger.compiler_processor = "com.google.dagger:dagger-android-processor:$versions.dagger"
+deps.dagger = dagger
 
 def facebook = [:]
 facebook.sdk = "com.facebook.android:facebook-android-sdk:$versions.facebook"
