--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation deps.androidx.lifecycle_ktx
     implementation deps.androidx.constraint_layout
 
+    implementation deps.navigation.ui_ktx
+    implementation deps.navigation.fragment_ktx
+
     implementation deps.dagger.base
     implementation deps.dagger.android
     implementation deps.dagger.android_support
