--- a/versions.gradle
+++ b/versions.gradle
@@ -20,6 +20,7 @@ versions.ext_junit = "1.1.1"
 versions.espresso = "3.2.0"
 
 // etc
+versions.material = "1.1.0"
 versions.dagger = "2.28"
 versions.facebook = "[4,5)"
 
@@ -75,6 +76,11 @@ test.espresso = "androidx.test.espresso:espresso-core:$versions.espresso"
 deps.test = test
 
 
+def material = [:]
+material.base = "com.google.android.material:material:$versions.material"
+deps.material = material
+
+
 def dagger = [:]
 dagger.base = "com.google.dagger:dagger:$versions.dagger"
 dagger.android = "com.google.dagger:dagger-android:$versions.dagger"
@@ -84,7 +90,7 @@ dagger.compiler_processor = "com.google.dagger:dagger-android-processor:$version
 deps.dagger = dagger
 
 def facebook = [:]
-facebook.sdk = "com.facebook.android:facebook-android-sdk:$versions.facebook"
+facebook.base = "com.facebook.android:facebook-android-sdk:$versions.facebook"
 deps.facebook = facebook
 
 // apply
