--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,14 @@ dependencies {
     kapt deps.dagger.compiler
     kapt deps.dagger.compiler_processor
 
+    implementation deps.retrofit.base
+    implementation deps.retrofit.convert_moshi
+
+    implementation deps.okhttp.logging_interceptor
+
+    implementation deps.moshi.kotlin
+    kapt deps.moshi.kotlin_codegen
+
     implementation deps.facebook.base
 
     testImplementation deps.test.junit
