--- a/versions.gradle
+++ b/versions.gradle
@@ -26,6 +26,7 @@ versions.retrofit = "2.9.0"
 versions.okhttp = "4.7.2"
 versions.moshi = "1.9.2"
 versions.facebook = "[4,5)"
+versions.glide = "4.11.0"
 
 ext.versions = versions
 
@@ -109,6 +110,11 @@ moshi.kotlin = "com.squareup.moshi:moshi-kotlin:$versions.moshi"
 moshi.kotlin_codegen = "com.squareup.moshi:moshi-kotlin-codegen:$versions.moshi"
 deps.moshi = moshi
 
+
+def glide = [:]
+glide.base = "com.github.bumptech.glide:glide:$versions.glide"
+glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
+deps.glide = glide
 
 def facebook = [:]
 facebook.base = "com.facebook.android:facebook-android-sdk:$versions.facebook"
