--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    implementation project(path: ':data')
+    implementation project(path: ':domain')
+
     implementation deps.kotlin.stdlib
 
     implementation deps.androidx.core_ktx
