--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion build_versions.compile_sdk
@@ -37,10 +38,28 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    implementation project(path: ':domain')
+
     implementation deps.kotlin.stdlib
+
+    implementation deps.coroutines.core
 
     implementation deps.androidx.core_ktx
     implementation deps.androidx.appcompat
+
+    implementation deps.dagger.base
+    implementation deps.dagger.android
+    implementation deps.dagger.android_support
+    kapt deps.dagger.compiler
+    kapt deps.dagger.compiler_processor
+
+    implementation deps.retrofit.base
+    implementation deps.retrofit.convert_moshi
+
+    implementation deps.okhttp.logging_interceptor
+
+    implementation deps.moshi.kotlin
+    kapt deps.moshi.kotlin_codegen
 
     testImplementation deps.test.junit
     androidTestImplementation deps.test.ext_junit
