--- a/versions.gradle
+++ b/versions.gradle
@@ -5,6 +5,9 @@ versions.gradle = "4.0.0"
 // kotlin
 versions.kotlin = "1.3.72"
 
+// Coroutines
+versions.coroutines = "1.3.5"
+
 // androidx
 versions.core = "1.3.0"
 versions.appcompat = "1.1.0"
@@ -55,6 +58,11 @@ deps.plugin = plugin
 def kotlin = [:]
 kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 deps.kotlin = kotlin
+
+
+def coroutines = [:]
+coroutines.core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines"
+deps.coroutines = coroutines
 
 
 def androidx = [:]
@@ -115,6 +123,7 @@ def glide = [:]
 glide.base = "com.github.bumptech.glide:glide:$versions.glide"
 glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
 deps.glide = glide
+
 
 def facebook = [:]
 facebook.base = "com.facebook.android:facebook-android-sdk:$versions.facebook"
