--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation deps.androidx.activity_ktx
     implementation deps.androidx.fragment_ktx
     implementation deps.androidx.lifecycle_ktx
+    implementation deps.androidx.viewpager
     implementation deps.androidx.constraint_layout
 
     implementation deps.navigation.ui_ktx
