--- a/versions.gradle
+++ b/versions.gradle
@@ -14,6 +14,7 @@ versions.appcompat = "1.1.0"
 versions.activity = "1.1.0"
 versions.fragment = "1.2.4"
 versions.lifecycle = "2.2.0"
+versions.viewpager = "1.0.0"
 versions.navigation = "2.2.2"
 versions.constraint_layout = "1.1.3"
 
@@ -71,6 +72,7 @@ androidx.appcompat = "androidx.appcompat:appcompat:$versions.appcompat"
 androidx.activity_ktx = "androidx.activity:activity-ktx:$versions.activity"
 androidx.fragment_ktx = "androidx.fragment:fragment-ktx:$versions.fragment"
 androidx.lifecycle_ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle"
+androidx.viewpager = "androidx.viewpager2:viewpager2:$versions.viewpager"
 androidx.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
 deps.androidx = androidx
 
