인디케이터 처리 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     implementation deps.glide.base
     kapt deps.glide.compiler
 
+    implementation deps.circle_indicator.base
+
     testImplementation deps.test.junit
     androidTestImplementation deps.test.ext_junit
     androidTestImplementation deps.test.espresso
