--- a/versions.gradle
+++ b/versions.gradle
@@ -31,6 +31,7 @@ versions.okhttp = "4.7.2"
 versions.moshi = "1.9.2"
 versions.facebook = "[4,5)"
 versions.glide = "4.11.0"
+versions.circle_indicator = "2.1.4"
 
 ext.versions = versions
 
@@ -130,6 +131,11 @@ deps.glide = glide
 def facebook = [:]
 facebook.base = "com.facebook.android:facebook-android-sdk:$versions.facebook"
 deps.facebook = facebook
+
+
+def circle_indicator = [:]
+circle_indicator.base = "me.relex:circleindicator:$versions.circle_indicator"
+deps.circle_indicator = circle_indicator
 
 // apply
 ext.deps = deps
