비디오 재생되도록 exo player 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     implementation deps.glide.base
     kapt deps.glide.compiler
 
+    implementation deps.exo_player.base
+
     implementation deps.circle_indicator.base
 
     testImplementation deps.test.junit
