--- a/versions.gradle
+++ b/versions.gradle
@@ -31,6 +31,7 @@ versions.okhttp = "4.7.2"
 versions.moshi = "1.9.2"
 versions.facebook = "[4,5)"
 versions.glide = "4.11.0"
+versions.exo_player = "2.11.5"
 versions.circle_indicator = "2.1.4"
 
 ext.versions = versions
@@ -131,6 +132,11 @@ deps.glide = glide
 def facebook = [:]
 facebook.base = "com.facebook.android:facebook-android-sdk:$versions.facebook"
 deps.facebook = facebook
+
+
+def exo_player = [:]
+exo_player.base = "com.google.android.exoplayer:exoplayer:$versions.exo_player"
+deps.exo_player = exo_player
 
 
 def circle_indicator = [:]
