--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath deps.plugin.android
         classpath deps.plugin.kotlin
         classpath deps.plugin.navigation
+        classpath deps.plugin.realm
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
