--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
         jvmTarget = '1.8'
         freeCompilerArgs = ["-Xallow-result-return-type"]
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
