hilt 의존성 추가

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'realm-android'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion build_versions.compile_sdk
@@ -47,6 +48,9 @@ dependencies {
 
     implementation deps.androidx.core_ktx
     implementation deps.androidx.appcompat
+
+    implementation deps.hilt.android
+    kapt deps.hilt.android_compiler
 
     implementation deps.dagger.base
     implementation deps.dagger.android
