--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion build_versions.compile_sdk
@@ -51,9 +52,14 @@ dependencies {
     implementation deps.androidx.lifecycle_ktx
     implementation deps.androidx.viewpager
     implementation deps.androidx.constraint_layout
+    implementation deps.androidx.hilt
+    kapt deps.androidx.hilt_compiler
 
     implementation deps.navigation.ui_ktx
     implementation deps.navigation.fragment_ktx
+
+    implementation deps.hilt.android
+    kapt deps.hilt.android_compiler
 
     implementation deps.material.base
 
