--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath deps.plugin.kotlin
         classpath deps.plugin.navigation
         classpath deps.plugin.realm
+        classpath deps.plugin.hilt
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
