--- a/versions.gradle
+++ b/versions.gradle
@@ -23,6 +23,11 @@ versions.junit = "4.12"
 versions.ext_junit = "1.1.1"
 versions.espresso = "3.2.0"
 
+// hilt
+versions.hilt = "2.28-alpha"
+versions.hilt_androidx_compiler = "1.0.0-alpha01"
+versions.hilt_androidx_lifecycle_viewmodel = "1.0.0-alpha01"
+
 // etc
 versions.material = "1.1.0"
 versions.dagger = "2.28"
@@ -56,6 +61,7 @@ plugin.android = "com.android.tools.build:gradle:$versions.gradle"
 plugin.kotlin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
 plugin.navigation = "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.navigation"
 plugin.realm = "io.realm:realm-gradle-plugin:$versions.realm"
+plugin.hilt = "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt"
 deps.plugin = plugin
 
 
@@ -77,6 +83,8 @@ androidx.fragment_ktx = "androidx.fragment:fragment-ktx:$versions.fragment"
 androidx.lifecycle_ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle"
 androidx.viewpager = "androidx.viewpager2:viewpager2:$versions.viewpager"
 androidx.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
+androidx.hilt = "androidx.hilt:hilt-lifecycle-viewmodel:$versions.hilt_androidx_lifecycle_viewmodel"
+androidx.hilt_compiler = "androidx.hilt:hilt-compiler:$versions.hilt_androidx_compiler"
 deps.androidx = androidx
 
 
@@ -91,6 +99,12 @@ test.junit = "junit:junit:$versions.junit"
 test.ext_junit = "androidx.test.ext:junit:$versions.ext_junit"
 test.espresso = "androidx.test.espresso:espresso-core:$versions.espresso"
 deps.test = test
+
+
+def hilt = [:]
+hilt.android = "com.google.dagger:hilt-android:$versions.hilt"
+hilt.android_compiler = "com.google.dagger:hilt-android-compiler:$versions.hilt"
+deps.hilt = hilt
 
 
 def material = [:]
