--- a/versions.gradle
+++ b/versions.gradle
@@ -3,7 +3,7 @@ def versions = [:]
 versions.gradle = "4.0.0"
 
 // kotlin
-versions.kotlin = "1.3.72"
+versions.kotlin = "1.4.31"
 
 // Coroutines
 versions.coroutines = "1.3.5"
@@ -24,7 +24,7 @@ versions.ext_junit = "1.1.1"
 versions.espresso = "3.2.0"
 
 // hilt
-versions.hilt = "2.28-alpha"
+versions.hilt = "2.33-beta"
 versions.hilt_androidx_compiler = "1.0.0-alpha01"
 versions.hilt_androidx_lifecycle_viewmodel = "1.0.0-alpha01"
 
